--- a/pages/HyperlipidemiaSurveillance/HyperlipidemiaSurveillance.wxml
+++ b/pages/HyperlipidemiaSurveillance/HyperlipidemiaSurveillance.wxml
@@ -147,71 +147,121 @@
   </view>
   <view wx:if="{{mode == 'readonly'}}">
     <view wx:if="{{ score <= 25 }}">
-      <View class="score lowRisk">您的当前评分：{{score}}</View>
-      <view class="score">危险评级</view>
-      <view class="lowRisk">低危</view>
+      <View class="score">您的当前评分：{{score}}/100</View>
+      <view class="score">危险评级 : 低危（10 年动脉粥样硬化性心血管疾病发病危险小于5%）</view>
+      <view>
+        <view class="riskBar">
+          <view class="riskMark active"></view>
+          <view class="riskMark"></view>
+          <view class="riskMark"></view>
+          <view class="riskMark"></view>
+        </view>
+        <view class="riskBar">
+          <view class="lowRisk">低危</view>
+          <view class="mediumRisk">中危</view>
+          <view class="highRisk">高危</view>
+          <view class="extremeHighRisk">极高危</view>
+        </view>
+      </view>
     </view>
     <view wx:if="{{ 50 >= score > 25  }}">
-      <View class="score mediumRisk">您的当前评分：{{score}}</View>
-      <view class="score">危险评级</view>
-      <view class="mediumRisk">中危</view>
+      <View class="score">您的当前评分：{{score}}/100</View>
+      <view class="score">危险评级:中危（10 年动脉粥样硬化性心血管疾病发病危险5-9%）</view>
+      <view>
+        <view class="riskBar">
+          <view class="riskMark"></view>
+          <view class="riskMark active"></view>
+          <view class="riskMark"></view>
+          <view class="riskMark"></view>
+        </view>
+        <view class="riskBar">
+          <view class="lowRisk">低危</view>
+          <view class="mediumRisk">中危</view>
+          <view class="highRisk">高危</view>
+          <view class="extremeHighRisk">极高危</view>
+        </view>
+      </view>
     </view>
     <view wx:if="{{ 75 >= score > 50  }}">
-      <view class="highRisk">
-        <View class="score">您的当前评分：{{score}}</View>
-        <view class="score">危险评级 :高危</view>
+      <View class="score">您的当前评分：{{score}}/100</View>
+      <view class="score">危险评级 :高危（10 年动脉粥样硬化性心血管疾病发病危险大于10%）</view>
+      <view>
+        <view class="riskBar">
+          <view class="riskMark"></view>
+          <view class="riskMark"></view>
+          <view class="riskMark active"></view>
+          <view class="riskMark"></view>
+        </view>
+        <view class="riskBar">
+          <view class="lowRisk">低危</view>
+          <view class="mediumRisk">中危</view>
+          <view class="highRisk">高危</view>
+          <view class="extremeHighRisk">极高危</view>
+        </view>
       </view>
     </view>
     <view wx:if="{{ score > 75 }}">
-      <view class="extremeHighRisk">
-        <View class="score">您的当前评分：{{score}}</View>
-        <view class="score">危险评级：极高危</view>
+      <View class="score">您的当前评分：{{score}}/100</View>
+      <view class="score">危险评级：极高危（心血管疾病终生风险大于32.8%）</view>
+      <view>
+        <view class="riskBar">
+          <view class="riskMark"></view>
+          <view class="riskMark"></view>
+          <view class="riskMark"></view>
+          <view class="riskMark active"></view>
+        </view>
+        <view class="riskBar">
+          <view class="lowRisk">低危</view>
+          <view class="mediumRisk">中危</view>
+          <view class="highRisk">高危</view>
+          <view class="extremeHighRisk">极高危</view>
+        </view>
       </view>
     </view>
     <view class="score">健康小提示</view>
-      <view class="tips">
-        <text>
-          1.坚持心脏健康饮食：
-          每天食盐控制在5克以内，每日摄入胆固醇应低于 300 mg
-        </text>
-      </view>
-      <view class="tips">
-        <text>
-          2.规律运动：
-          每周 5 -7 次，每次 30 min 以上中等量级有氧运动
-        </text>
-      </view>
-      <view class="tips">
-        <text>
-          3.戒烟：
-          越早戒烟，获益越大
-        </text>
-      </view>
-      <view class="tips">
-        <text>
-          4.限酒：
-          每日饮酒量：啤酒少于355ml，红酒少于2两，白酒少于1两
-        </text>
-      </view>
-      <view class="tips">
-        <text>
-          5.保持健康体重：
-          BMI= 体重（ kg ） / 身高（ m 2 ）维持在 20 - 23.9 之间
-        </text>
-      </view>
-      <view class="tips" decode="true">
-        <text decode="true">
-          6.控制血脂水平：
-          a.降低 LDL-C 水平作为首要的干预靶点，非-HDL-C 可作为次要干预靶点；
-          b.原则上LDL-C 控制的水平越低越好，
-          c.最低限度控制LDL-C&lt;1.8&nbsp;mmol/L（最好&lt;1.4mmol/L)，或非-HDL-C&lt;2.6mmol/L；
-          d. LDL-C 基线值较高不能达目标值者，LDL-C 至少降低 30%；
-        </text>
-      </view>
-      <view class="tips">
-        <text>
-          7.具体降脂方案在医生指导下进行
-        </text>
-      </view>
+    <view class="tips">
+      <text>
+        1.坚持心脏健康饮食：
+        每天食盐控制在5克以内，每日摄入胆固醇应低于 300 mg
+      </text>
+    </view>
+    <view class="tips">
+      <text>
+        2.规律运动：
+        每周 5 -7 次，每次 30 min 以上中等量级有氧运动
+      </text>
+    </view>
+    <view class="tips">
+      <text>
+        3.戒烟：
+        越早戒烟，获益越大
+      </text>
+    </view>
+    <view class="tips">
+      <text>
+        4.限酒：
+        每日饮酒量：啤酒少于355ml，红酒少于2两，白酒少于1两
+      </text>
+    </view>
+    <view class="tips">
+      <text>
+        5.保持健康体重：
+        BMI= 体重（ kg ） / 身高（ m 2 ）维持在 20 - 23.9 之间
+      </text>
+    </view>
+    <view class="tips" decode="true">
+      <text decode="true">
+        6.控制血脂水平：
+        a.降低 LDL-C 水平作为首要的干预靶点，非-HDL-C 可作为次要干预靶点；
+        b.原则上LDL-C 控制的水平越低越好，
+        c.最低限度控制LDL-C&lt;1.8&nbsp;mmol/L（最好&lt;1.4mmol/L)，或非-HDL-C&lt;2.6mmol/L；
+        d. LDL-C 基线值较高不能达目标值者，LDL-C 至少降低 30%；
+      </text>
+    </view>
+    <view class="tips">
+      <text>
+        7.具体降脂方案在医生指导下进行
+      </text>
+    </view>
   </view>
 </mp-form-page>
