--- a/pages/my/my.wxml
+++ b/pages/my/my.wxml
@@ -3,18 +3,15 @@
   <view class="mybg">
     <text class="bg_title">我的</text>
     <view class="user_info">
-      <block wx:if="{{!hasUserInfo}}">
-      <button wx:if="{{canIUseGetUserProfile}}" bindtap="getUserProfile"> 立即登录 </button>
-      <button wx:else open-type="getUserInfo" bindgetuserinfo="getUserInfo"> 立即登录 </button>
-    </block>
-    <block wx:else>
       <view class="user_display">
         <image bindtap="bindViewTap" class="userinfo-avatar" src="{{loginUser.avatarUrl}}" mode="cover"></image>
         <view class="user_text">
           <text class="userinfo-nickname">{{loginUser.nickName}}</text>
+          <block wx:if="{{loginUser.hasSyncWeChatUserProfile == false}}">
+          <button bindtap="getUserProfile">同步微信头像昵称</button>
+          </block>
         </view>
       </view>
-    </block>
     </view>
   </view>
   <view class="menu">
@@ -24,10 +21,10 @@
       <image class="menu-arrow" src="https://7072-prod-0g7y3h923f261408-1311435230.tcb.qcloud.la/arrow.png?sign=9e836176e5cba2b373890023a4d3db16&t=1653184303" />
     </view>
     <view class="divLine"></view>
-        <view class="menu-item" bindtap="toRecords">
+    <view class="menu-item" bindtap="toRecords">
       <image src="https://7072-prod-0g7y3h923f261408-1311435230.tcb.qcloud.la/my_surveillance.png?sign=33a9c8f46bfa6faeb06b9ef7c4fdc823&t=1653190369" />
       <text>监测历史数据</text>
-      <image  class="menu-arrow" src="https://7072-prod-0g7y3h923f261408-1311435230.tcb.qcloud.la/arrow.png?sign=9e836176e5cba2b373890023a4d3db16&t=1653184303"/>
+      <image class="menu-arrow" src="https://7072-prod-0g7y3h923f261408-1311435230.tcb.qcloud.la/arrow.png?sign=9e836176e5cba2b373890023a4d3db16&t=1653184303" />
     </view>
     <view class="divLine"></view>
     <view wx:if="{{loginUser.isDistributor == true}}" class="menu-item" bindtap="toqrCode">
