--- a/pages/HyperlipidemiaSurveillance/HyperlipidemiaSurveillance.wxml
+++ b/pages/HyperlipidemiaSurveillance/HyperlipidemiaSurveillance.wxml
@@ -335,7 +335,7 @@
         </view>
       </view>
     </view>
-    <view wx:if="{{ 50 >= score > 25  }}">
+    <view wx:if="{{ score <= 50 && score > 25  }}">
       <View class="score">您的当前评分：{{score}}/100</View>
       <view class="score">危险评级:中危（10 年动脉粥样硬化性疾病发病危险5-9%）</view>
       <view>
@@ -353,7 +353,7 @@
         </view>
       </view>
     </view>
-    <view wx:if="{{ 75 >= score > 50  }}">
+    <view wx:if="{{  score <= 75 && score > 50  }}">
       <View class="score">您的当前评分：{{score}}/100</View>
       <text class="score">危险评级:
         高危（10 年动脉粥样硬化性疾病发病危险大于10%）
