--- a/pages/cardiacInsufficiency/cardiacInsufficiency.wxss
+++ b/pages/cardiacInsufficiency/cardiacInsufficiency.wxss
@@ -17,34 +17,63 @@
   justify-content: center;
 }
 
-.lowRisk{
-  color: green;
-  padding: 0 40rpx;
-  display:flex;
-  align-items: center;
+.lowRisk {
+  background-color: green;
+  width: 120rpx;
+  height: 40rpx;
+  display: flex;
   justify-content: center;
+  color: black;
 }
 
-.mediumRisk{
-  color:blue;
-  padding: 0 40rpx;
-  display:flex;
-  align-items: center;
+.mediumRisk {
+  background-color: yellow;
+  width: 120rpx;
+  height: 40rpx;
+  display: flex;
   justify-content: center;
+  color: blakc;
 }
 
-.highRisk{
-  color:orange;
-  padding: 0 40rpx;
-  display:flex;
-  align-items: center;
+.highRisk {
+  background-color: orange;
+  width: 120rpx;
+  height: 40rpx;
+  display: flex;
   justify-content: center;
+  color: black;
 }
 
 .extremeHighRisk {
-  color: red;
-  padding: 0 40rpx;
-  display:flex;
-  align-items: center;
+  background-color: red;
+  width: 120rpx;
+  height: 40rpx;
+  display: flex;
   justify-content: center;
+  color: black;
+}
+
+.riskBar {
+  width: 480rpx;
+  margin: auto;
+  display: flex;
+  margin-top: 30rpx;
+}
+
+.riskMark {
+  width: 120rpx;
+  height: 40rpx;
+}
+
+.active {
+  width: 0;
+  height: 0;
+  border-left: 30rpx solid transparent;
+  border-right: 30rpx solid transparent;
+  border-top: 40rpx solid black;
+  margin-left: 30rpx;
+}
+
+.tips {
+  padding: 0 40rpx;
 }
